--- a/pages/tutorials/Dash tutorial.ipynb
+++ b/pages/tutorials/Dash tutorial.ipynb
@@ -378,35 +378,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe src=https://dash-tutorial.herokuapp.com/ width=900 height=600 frameBorder=0></iframe>"
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://dash-tutorial.herokuapp.com/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.lib.display.IFrame at 0x300b7d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'https://dash-tutorial.herokuapp.com/'\n",
-    "iframe = '<iframe src=' + url + ' width=900 height=600 frameBorder=0></iframe>'\n",
-    "IPython.display.HTML(iframe)"
+    "from IPython.display import IFrame\n",
+    "IFrame('https://dash-tutorial.herokuapp.com/',width=900, height=600)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
